- body overflow height bug fixed.

--- a/src/app/menu-category/menu-category.component.css
+++ b/src/app/menu-category/menu-category.component.css
@@ -7,7 +7,7 @@
   src: url('../../assets/fonts/JosefinSans-Regular.ttf') format("opentype");
 }
 .main{
-  height: 150vh;
+  /*height: 150vh;*/
   background-color: white;
   display: flex;
   flex-direction: column;
